--- a/KnowItAll/Settings.storyboard
+++ b/KnowItAll/Settings.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1611" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2B3-ZQ-Fds">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2B3-ZQ-Fds">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -34,7 +34,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="SettingsVC" id="xGI-r1-IV6" customClass="SettingsVC" customModule="KnowItAll" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="7G3-Pp-GcK">
-                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="separatorColor" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -43,7 +43,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fu6-mQ-uG4" id="5jE-gd-nvD">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -79,7 +79,7 @@
                         <viewControllerLayoutGuide type="bottom" id="d3t-6r-it2"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="609-uC-XoQ" customClass="changePassword">
-                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Old Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KOy-W7-3La">
@@ -149,7 +149,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="notifications" title="Notifications" id="yxY-WR-RnW" customClass="notificationsVC" customModule="KnowItAll" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="67" sectionHeaderHeight="28" sectionFooterHeight="28" id="1cZ-0i-ome">
-                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -157,10 +157,10 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="67"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="e3E-HX-V6V" id="Q0Q-aU-kzF">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="66"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="66.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d5P-FN-I1f">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d5P-FN-I1f">
                                             <rect key="frame" x="18" y="8" width="47" height="47"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="d5P-FN-I1f" secondAttribute="height" multiplier="1:1" id="QPT-8Z-lxX"/>
@@ -168,13 +168,13 @@
                                                 <constraint firstAttribute="width" constant="47" id="zae-xM-CAm"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dcp-pz-iYg">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dcp-pz-iYg">
                                             <rect key="frame" x="70" y="34" width="287" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uMh-Tn-WG6">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uMh-Tn-WG6">
                                             <rect key="frame" x="70" y="8" width="287" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -213,38 +213,95 @@
         <!--Rate KnowItAll!-->
         <scene sceneID="EmB-Jd-gzw">
             <objects>
-                <viewController storyboardIdentifier="Rate" title="Rate KnowItAll!" id="ys0-k5-rX0" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Rate" title="Rate KnowItAll!" id="ys0-k5-rX0" customClass="rateVC" customModule="KnowItAll" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Jvw-aR-M7H"/>
                         <viewControllerLayoutGuide type="bottom" id="x0H-yy-RLx"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="xUt-Iv-4dG">
-                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lp4-x6-NB4" customClass="CosmosView" customModule="Cosmos">
+                                <rect key="frame" x="127" y="291" width="120" height="20"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qNK-I1-3rD">
+                                <rect key="frame" x="160" y="335" width="55" height="30"/>
+                                <state key="normal" title="Confirm"/>
+                                <connections>
+                                    <action selector="confirm:" destination="ys0-k5-rX0" eventType="touchUpInside" id="y72-0V-Xb7"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="qNK-I1-3rD" firstAttribute="leading" secondItem="xUt-Iv-4dG" secondAttribute="leadingMargin" constant="144" id="Dde-cr-P9B"/>
+                            <constraint firstItem="qNK-I1-3rD" firstAttribute="top" secondItem="Lp4-x6-NB4" secondAttribute="bottom" constant="24" id="FEb-K2-V7L"/>
+                            <constraint firstItem="Lp4-x6-NB4" firstAttribute="centerY" secondItem="xUt-Iv-4dG" secondAttribute="centerY" id="WL3-dW-yXa"/>
+                            <constraint firstItem="Lp4-x6-NB4" firstAttribute="centerX" secondItem="xUt-Iv-4dG" secondAttribute="centerX" id="WjO-e7-vrh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="qNK-I1-3rD" secondAttribute="trailing" constant="144" id="YYX-lR-qiq"/>
+                            <constraint firstItem="qNK-I1-3rD" firstAttribute="centerX" secondItem="xUt-Iv-4dG" secondAttribute="centerX" id="cvX-Rd-ogL"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="stars" destination="Lp4-x6-NB4" id="jQS-8l-r53"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g1E-Ah-7AX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-924" y="600"/>
+            <point key="canvasLocation" x="-924" y="599.55022488755628"/>
         </scene>
         <!--Submit Feedback-->
         <scene sceneID="pxD-5O-sZQ">
             <objects>
-                <viewController storyboardIdentifier="Submit" title="Submit Feedback" id="HLP-d9-dXO" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Submit" title="Submit Feedback" id="HLP-d9-dXO" customClass="FeedbackVC" customModule="KnowItAll" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="b9b-0U-opM"/>
                         <viewControllerLayoutGuide type="bottom" id="sk7-EL-fO8"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="k2P-eu-faV">
-                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMf-iA-ATa">
+                                <rect key="frame" x="160" y="315" width="55" height="30"/>
+                                <state key="normal" title="Confirm"/>
+                                <connections>
+                                    <action selector="confirm:" destination="ys0-k5-rX0" eventType="touchUpInside" id="gAk-jS-g5F"/>
+                                    <action selector="confirm:" destination="HLP-d9-dXO" eventType="touchUpInside" id="slX-YJ-xMP"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="LRb-Yf-5pN">
+                                <rect key="frame" x="67" y="159" width="240" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="9yN-Gc-e7t"/>
+                                    <constraint firstAttribute="height" constant="128" id="cwL-e1-B5Y"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="LRb-Yf-5pN" secondAttribute="trailing" constant="52" id="Jjx-1G-HCy"/>
+                            <constraint firstItem="LRb-Yf-5pN" firstAttribute="top" secondItem="b9b-0U-opM" secondAttribute="bottom" constant="159" id="M9v-9l-dfZ"/>
+                            <constraint firstItem="LRb-Yf-5pN" firstAttribute="centerX" secondItem="k2P-eu-faV" secondAttribute="centerX" id="ahT-sg-UZQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vMf-iA-ATa" secondAttribute="trailing" constant="144" id="b6Y-T6-FrC"/>
+                            <constraint firstItem="LRb-Yf-5pN" firstAttribute="leading" secondItem="k2P-eu-faV" secondAttribute="leadingMargin" constant="51" id="nJ8-9L-Qc2"/>
+                            <constraint firstItem="vMf-iA-ATa" firstAttribute="leading" secondItem="k2P-eu-faV" secondAttribute="leadingMargin" constant="144" id="pHa-38-bVm"/>
+                            <constraint firstItem="vMf-iA-ATa" firstAttribute="top" secondItem="LRb-Yf-5pN" secondAttribute="bottom" constant="28" id="wtj-0t-lVV"/>
+                            <constraint firstItem="vMf-iA-ATa" firstAttribute="centerX" secondItem="k2P-eu-faV" secondAttribute="centerX" id="xeZ-h1-daz"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="feedback" destination="LRb-Yf-5pN" id="jgY-g8-Nlg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dPH-Ji-KMN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-924" y="1345"/>
+            <point key="canvasLocation" x="-924" y="1344.3778110944529"/>
         </scene>
     </scenes>
     <resources>
