--- a/KnowItAll/MyPosts.storyboard
+++ b/KnowItAll/MyPosts.storyboard
@@ -1,11 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1611" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dXq-cm-hfk">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dXq-cm-hfk">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,17 +22,117 @@
                     <view key="view" contentMode="scaleToFill" id="Trr-aS-MNS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lwX-hh-JKf">
+                                <rect key="frame" x="0.0" y="48" width="375" height="570"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="mZ8-0d-59d">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="10"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <view alpha="0.5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IUi-UY-9P6">
+                                            <rect key="frame" x="0.0" y="9" width="375" height="1"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SpecificReviewCell" rowHeight="100" id="zgg-c1-CTO" customClass="SpecificReviewCell" customModule="KnowItAll" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="38" width="375" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="zgg-c1-CTO" id="80n-yv-4Nh">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Star Wars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6I7-Yv-iut">
+                                                    <rect key="frame" x="14" y="8" width="102" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="25"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="I loved it!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YyB-on-aqX">
+                                                    <rect key="frame" x="14" y="69" width="353" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="353" id="qDb-Lz-PYw"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vHY-IT-X6c" customClass="CosmosView" customModule="Cosmos">
+                                                    <rect key="frame" x="14" y="37" width="120" height="20"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </view>
+                                                <view alpha="0.5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mLR-4i-ang">
+                                                    <rect key="frame" x="0.0" y="89" width="375" height="1"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                </view>
+                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0e2-xt-law">
+                                                    <rect key="frame" x="0.0" y="89" width="375" height="10"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                                                </view>
+                                                <view alpha="0.5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7hm-1I-xJW">
+                                                    <rect key="frame" x="0.0" y="99" width="375" height="1"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                </view>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Entertainment" translatesAutoresizingMaskIntoConstraints="NO" id="xlF-Ob-0wc">
+                                                    <rect key="frame" x="303" y="0.0" width="64" height="64"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="xlF-Ob-0wc" secondAttribute="height" multiplier="1:1" id="UL3-Gj-A7w"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="vHY-IT-X6c" firstAttribute="top" secondItem="6I7-Yv-iut" secondAttribute="bottom" constant="8" id="05i-iE-uXH"/>
+                                                <constraint firstItem="6I7-Yv-iut" firstAttribute="leading" secondItem="80n-yv-4Nh" secondAttribute="leadingMargin" constant="6" id="8Cw-rB-d3h"/>
+                                                <constraint firstItem="xlF-Ob-0wc" firstAttribute="top" secondItem="80n-yv-4Nh" secondAttribute="top" id="FmR-q0-b1d"/>
+                                                <constraint firstItem="vHY-IT-X6c" firstAttribute="leading" secondItem="80n-yv-4Nh" secondAttribute="leadingMargin" constant="6" id="PVj-bf-AQg"/>
+                                                <constraint firstAttribute="trailing" secondItem="xlF-Ob-0wc" secondAttribute="trailing" constant="8" id="YHC-iU-c4e"/>
+                                                <constraint firstItem="YyB-on-aqX" firstAttribute="top" secondItem="vHY-IT-X6c" secondAttribute="bottom" constant="12" id="bJO-dn-3P3"/>
+                                                <constraint firstItem="YyB-on-aqX" firstAttribute="leading" secondItem="80n-yv-4Nh" secondAttribute="leadingMargin" constant="6" id="gmh-a8-Yzh"/>
+                                                <constraint firstItem="YyB-on-aqX" firstAttribute="trailing" secondItem="80n-yv-4Nh" secondAttribute="trailingMargin" constant="6" id="r7w-6R-Mcd"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="comment" destination="YyB-on-aqX" id="B4Z-QP-1sA"/>
+                                            <outlet property="image" destination="xlF-Ob-0wc" id="PKr-6F-gDz"/>
+                                            <outlet property="img" destination="xlF-Ob-0wc" id="FLA-iQ-1Dx"/>
+                                            <outlet property="numReviews" destination="YyB-on-aqX" id="LDQ-2J-ttO"/>
+                                            <outlet property="postTitle" destination="6I7-Yv-iut" id="P0i-zF-6q8"/>
+                                            <outlet property="starRating" destination="vHY-IT-X6c" id="ofW-hJ-h7F"/>
+                                            <outlet property="stars" destination="vHY-IT-X6c" id="ciC-Gb-w9t"/>
+                                            <outlet property="title" destination="6I7-Yv-iut" id="yMt-WG-Hew"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g7h-nm-bqm">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.76862745099999996" green="0.1176470588" blue="0.2274509804" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="My Posts" image="myPosts" id="d6N-IQ-XB9"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="tableView" destination="lwX-hh-JKf" id="6dC-n0-occ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8QE-yN-M3z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="180" y="457"/>
+            <point key="canvasLocation" x="180" y="456.52173913043481"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Entertainment" width="64" height="64"/>
         <image name="myPosts" width="30" height="30"/>
     </resources>
 </document>
